// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tooltip [snapshot] > closed (wrapWithButton) 1`] = `
<div>
  <button
    class="vesper-tooltip-trigger"
    data-base-ui-tooltip-trigger=""
    id="base-ui-_r_49_"
    type="button"
  >
    <p
      class="vesper-typography vesper-typography-copy-md"
      style="color: var(--vesper-stone-900);"
    >
      tooltip trigger
    </p>
  </button>
</div>
`;

exports[`tooltip [snapshot] > closed 1`] = `
<div>
  <button
    class="vesper-text-button vesper-text-button-md vesper-text-button-accent vesper-tooltip-trigger"
    data-base-ui-tooltip-trigger=""
    id="base-ui-_r_46_"
  >
    tooltip trigger
  </button>
</div>
`;

exports[`tooltip [snapshot] > open 1`] = `
<div
  class="vesper-typography vesper-typography-label-xs vesper-tooltip"
  data-align="center"
  data-base-ui-focusable=""
  data-open=""
  data-side="top"
  id="vesper-tooltip-_r_40_"
  role="tooltip"
  style="max-width: calc(15rem);"
  tabindex="-1"
>
  Tooltip text
  <div
    class="vesper-tooltip-arrow"
  />
</div>
`;
